@@ -3,10 +3,10 @@
 # creating/updating linbofs.lz with linbo password and ssh keys
 # has to be invoked during linuxmuster-setup,  package upgrade or
 # linbo password change in /etc/rsyncd.secrets.
-# 
+#
 # thomas@linuxmuster.net
 # GPL V3
-# 20161207
+# 20170130
 #
 
 # read linuxmuster environment
@@ -51,25 +51,6 @@ update_linbofs() {
  # check for default linbofs${suffix}.lz
  [ ! -s "$LINBODIR/linbofs${suffix}.lz" ] && bailout "Error: $LINBODIR/linbofs${suffix}.lz not found!"
 
- # grep linbo rsync password to sync it with linbo account
- [ ! -s /etc/rsyncd.secrets ] && bailout "/etc/rsyncd.secrets not found!"
- local linbo_passwd="$(grep ^linbo /etc/rsyncd.secrets | awk -F\: '{ print $2 }')"
- if [ -z "$linbo_passwd" ]; then
-  bailout "Cannot read linbo password from /etc/rsyncd.secrets!"
- else
-  if [ "$LINBOPW" = "false" ]; then
-   sophomorix-passwd --user linbo --pass "$linbo_passwd" &> /dev/null ; RC="$?"
-   LINBOPW=true
-   if [ "$RC" = "0" ]; then
-    echo "Successfully set linbo password."
-   else
-    echo "WARNING: Sophomorix failed to set linbo password! Probably postgres or slapd services do not run!"
-   fi
-  fi
-  # md5sum of linbo password goes into ramdisk
-  local linbo_md5passwd=`echo -n $linbo_passwd | md5sum | awk '{ print $1 }'`
- fi
-
  # begin to process linbofs${suffix}.lz
  echo "Processing linbofs${suffix} update ..."
 
@@ -79,7 +60,7 @@ update_linbofs() {
  [ $RC -ne 0 ] && bailout " Failed to unpack $(basename "$linbofs")!"
 
  # store linbo md5 password
- [ -n "$linbo_md5passwd" ] && echo -n "$linbo_md5passwd" > etc/linbo_passwd
+ echo -n "$linbo_md5passwd" > etc/linbo_passwd
 
  # provide dropbear ssh host key
  mkdir -p etc/dropbear
@@ -114,9 +95,16 @@ create_www_links(){
  done
 }
 
-# avoid linbo password being set multiple times
-LINBOPW=false
+# grep linbo rsync password to sync it with linbo account
+[ ! -s /etc/rsyncd.secrets ] && bailout "/etc/rsyncd.secrets not found!"
+linbo_passwd="$(grep ^linbo /etc/rsyncd.secrets | awk -F\: '{ print $2 }')"
+if [ -z "$linbo_passwd" ]; then
+  bailout "Cannot read linbo password from /etc/rsyncd.secrets!"
+fi
+# md5sum of linbo password goes into ramdisk
+linbo_md5passwd=`echo -n $linbo_passwd | md5sum | awk '{ print $1 }'`
 
+# process linbofs updates
 update_linbofs
 update_linbofs -np
 update_linbofs 64
